--- a/autohosts/src/main/AndroidManifest.xml
+++ b/autohosts/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         android:icon="@drawable/ic_launcher"
         android:theme="@style/AppTheme"
         android:label="@string/app_name" >
+        <meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"/>
         <activity
             android:label="@string/app_name"
             android:name=".AutoHostsActivity" >
@@ -22,6 +24,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.google.ads.AdActivity"
+        		android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
+        <activity android:name=".AppendItemActivity"></activity>
     </application>
 
 </manifest>
