--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,24 +4,31 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk
+	<uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <meta-data android:name="com.google.android.gms.version"
+               android:value="@integer/google_play_services_version"/>
+    <activity android:name="com.google.android.gms.ads.AdActivity"
+             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
+        
         <activity
             android:name=".CoolHosts"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-
+  
+       <uses-permission android:name="android.permission.INTERNET"/>
+ 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    
+	
 </manifest>
